[package]
name = "jtag-taps"
version = "0.5.0"
edition = "2021"
description = "Library for interacting with individual TAPs on a JTAG scan chain"
license = "MIT"
repository = "https://github.com/srwalter/jtag-taps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libftd2xx = { version = "0.32", optional = true} 
ftdi-mpsse = { version = "0.1", optional = true}
rusb = {version = "0.9.3", optional = true}
embedded-hal = "1.0.0"

[features]
std = ["dep:libftd2xx", "dep:rusb", "dep:ftdi-mpsse"]
default = ["std"]
